# openrct2-autosplitter

./: .build.yml  Cargo.toml  OpenRCT2.asl  OpenRCT2_header.asl  OpenRCT2_post.asl  README.md  cache.ron
.github/workflows/: update.yml
src/: main.rs
