[package]
name = "openrct2-autosplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
git2 = "0.20"
hex = "0.4"
once_cell = "1"
pdb = "0.8"
rayon = "1"
ron = "0.8"
sha2 = "0.10"
tempfile = "3"
zip = "2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["serde_derive"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "rt-multi-thread", "fs", "net"]
